Fix story world info not showing up on hub page whenever the user navigates back to hub page from story page. Also fixed displaying singular and plural on Status.

--- a/client/src/styles/components/_navbar.scss
+++ b/client/src/styles/components/_navbar.scss
@@ -15,7 +15,7 @@
   a,
   a::before,
   a::after {
-    color: $color-light;
+    color: white;
   }
 
   &__logo {
@@ -39,6 +39,10 @@
     }
 
     svg {
+      height: 100%;
+    }
+
+    .svg__container {
       height: 100%;
     }
   }
