--- a/client/src/styles/components/_svg.scss
+++ b/client/src/styles/components/_svg.scss
@@ -24,7 +24,6 @@
     display: flex;
     justify-content: center;
     position: relative;
-    height: 100%;
 
     svg {
       margin: 0 auto;
